<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".alerts.view.AlertsDialog">


    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/cancelButton"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="159dp"
        android:layout_height="30dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/Set_Alarm"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/saveButton"
        app:layout_constraintStart_toEndOf="@+id/cancelButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="134dp"
        android:layout_height="33dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="108dp"
        android:text="@string/Alarm_Will_Ring"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <nl.joery.timerangepicker.TimeRangePicker
        android:id="@+id/picker"
        android:layout_width="336dp"
        android:layout_height="429dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:trp_endTime="6:30"
        app:trp_startTime="22:00"
        app:trp_thumbIconEnd="@drawable/alarm"
        app:trp_thumbIconStart="@drawable/moon"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/VibrationRadioButton"
        android:layout_width="129dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/Vibrate"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picker" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="68dp"
        android:layout_height="25dp"
        android:layout_marginStart="2dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <EditText
        android:id="@+id/alarmTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/alram_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/fromTime"
        android:layout_width="56dp"
        android:layout_height="29dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="44dp"
        android:gravity="center"
        android:text="00:00"
        app:layout_constraintBottom_toTopOf="@+id/toTime"
        app:layout_constraintEnd_toEndOf="@+id/picker"
        app:layout_constraintTop_toTopOf="@+id/picker"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/toTime"
        android:layout_width="64dp"
        android:layout_height="27dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="132dp"
        android:gravity="center"
        android:text="00:00"
        app:layout_constraintBottom_toBottomOf="@+id/picker"
        app:layout_constraintEnd_toEndOf="@+id/fromTime" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="47dp"
        android:layout_height="23dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:gravity="center"
        android:text="@string/From"
        app:layout_constraintEnd_toStartOf="@+id/fromTime"
        app:layout_constraintTop_toTopOf="@+id/fromTime" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="50dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="@string/To"
        app:layout_constraintEnd_toStartOf="@+id/toTime"
        app:layout_constraintTop_toTopOf="@+id/toTime" />
</androidx.constraintlayout.widget.ConstraintLayout>

